@@ -39,8 +39,11 @@ apport (0.94) UNRELEASED; urgency=low
     compressed value. Retain support for zlib-only reports. Add test cases for
     both old and new encodings, and adapt the other test cases for the new
     format. Update doc/data-format.tex accordingly.
+  * problem_report.py, write(): Add new permitted 'binary' argument value
+    'compressed', which retains gzip compressed binary values instead of
+    unpacking them transparently. Add test cases.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 31 Jul 2007 12:23:27 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 31 Jul 2007 19:23:25 +0200
 
 apport (0.93) gutsy; urgency=low
 
